fix: logo and text vertical alignment

--- a/src/sphinx_breeze_theme/assets/styles/components/header-brand.css
+++ b/src/sphinx_breeze_theme/assets/styles/components/header-brand.css
@@ -7,7 +7,7 @@
   font-size: 1.75rem;
   font-weight: 500;
 
-  > * {
+  > img {
     height: 2.275rem;
   }
 
